Update RewardService.java
fixed code